--- a/01_browser/11_carrot_game/style.css
+++ b/01_browser/11_carrot_game/style.css
@@ -5,6 +5,7 @@ button{
 }
 body{
     text-align: center;
+    background-color: rgb(52, 41, 41);
 }
 .game{
     display: flex;
@@ -42,6 +43,8 @@ body{
     font-size: 32px;
     margin-top: 8px;
     visibility: hidden;
+    user-select: none;
+    cursor: auto;
 }
 
 .game__score{
@@ -49,12 +52,14 @@ body{
     width: 50px;
     height: 50px;
     margin-top: 8px;
-    font-size: 46px;
+    font-size: 38px;
     border-radius: 50%;
     border: 3px solid black;
     background-color: darksalmon;    
     color: white;
     visibility: hidden;
+    user-select: none;
+    cursor: auto;
 
 }
 
@@ -102,4 +107,22 @@ body{
 .pop-up__message{
    display: block; 
    font-size: 38px;
+}
+
+.carrot, .bug{
+    transition: all 100ms ease-in;
+}
+
+.carrot:hover, .bug:hover{    
+    transform: scale(1.1);
+}
+
+.sunyeop{
+    /* position: relative; */
+    width: 200px;
+    margin-top: 150px;
+}
+
+.sunyeop__hide{
+    display: none;
 }
